actividad 2 de ing web 1

--- a/index1.html
+++ b/index1.html
@@ -1,63 +1,93 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <title>the store</title>
 </head>
 <body>
     <nav>
-        <div>
+        <div class="nav-main">
             <div>
                 <img src="logo2.jpg" alt="Logo de la tienda" width="300" height="100">
             </div>
-            <ul>
-                <li><a href="">products</a></li>
-                <li><a href="">car</a></li>
-                <li><a href="">login</a></li>
-                <li><a href="formulario.html">new product</a></li>
+            <ul class="menu">
+                <li>
+                    <a href="">products</a>
+                </li>
+                <li>
+                    <a href="">car</a>
+                </li>
+                <li>
+                    <a href="">login</a>
+                </li>
+                <li>
+                    <a href="formulario.html">new product</a>
+                </li>
             </ul>
-         </div>
+        </div>
     </nav>
 
-    <br>
 
-    <div>
+    <div class="container">
         <div> 
-            <img src="relojdigitalx2.jpg" alt="Reloj Digital" width="300" height="200"><br>
+            <img src="relojdigitalx2.jpg" alt="Reloj Digital" class="imagenes">
+
             <div>
-                <b>Reloj Digital</b><br>
+                <b>Reloj Digital</b>
                 <p>$30.000</p>
-                <button>Add Car</button>
+                <button>
+                    <span class="transition"></span>
+                    <span class="gradient"></span>
+                    <span class="label">Add Car</span>
+                  </button>
             </div>
-        </div>
     </div>
-    <br>
 
-    <div>
+
         <div>
-            <img src="despertador.jpg" alt="Despertador" width="300" height="200"><br>
+            <img src="despertador.jpg" alt="Despertador" class="imagenes">
+
             <div>
-                <b>Reloj Despertador</b><br>
+                <b>Reloj Despertador</b>
                 <p>$42.000</p>
-                <button>Add Car</button>
+                <button>
+                    <span class="transition"></span>
+                    <span class="gradient"></span>
+                    <span class="label">Add Car</span>
+                  </button>
 
             </div>
         </div>
-    </div>
-    <br>
-    <br>
-    <div>
+
         <div>
-             <img src="rejojant.jpg" alt="Reloj Antiguo" width="300" height="200"><br>
+             <img src="rejojant.jpg" alt="Reloj Antiguo class=" class="imagenes">
              <div>
                  <b>Reloj Antiguo</b><br>
                  <p>$100.000</p>
-                 <button>Add Car</button>
+                 <button>
+                    <span class="transition"></span>
+                    <span class="gradient"></span>
+                    <span class="label">Add Car</span>
+                  </button>
             </div>
         </div>
+        <div> 
+            <img src="relojarena.jpg" alt="Reloj de Arena" class="imagenes">
+
+            <div>
+                <b>Reloj De Arena</b>
+                <p>$70.000</p>
+                <button>
+                    <span class="transition"></span>
+                    <span class="gradient"></span>
+                    <span class="label">Add Car</span>
+                  </button>
+            </div>
     </div>
-    <br>
+    </div>
+
 
 </body>
 </html>
