--- a/formulario.html
+++ b/formulario.html
@@ -31,9 +31,10 @@
     </nav>
     
     <form>
-        <label for="Nombre">Nombre :</label>
+        <h1>New Product</h1>
+        <label for="Name">Name :</label>
         <input class="input" name="text" type="text">
-        <label for="Product">Product :</label>
+        <label for="Prace">Price :</label>
         <input class="input" name="number" type="number">
         <label for="Inventory">Inventory :</label>
         <input class="input" name="number" type="number">
