"actividad 1 de ing web 1"

--- a/index1.html
+++ b/index1.html
@@ -32,7 +32,7 @@
 
     <div class="container">
         <div> 
-            <img src="relojdigitalx2.jpg" alt="Reloj Digital" class="imagenes">
+            <img src="relojdigitalx2.jpg" alt="Reloj Digital" class="imagenes" width="300" height="300">
 
             <div>
                 <b>Reloj Digital</b>
@@ -47,7 +47,7 @@
 
 
         <div>
-            <img src="despertador.jpg" alt="Despertador" class="imagenes">
+            <img src="despertador.jpg" alt="Despertador" class="imagenes" width="300" height="300">
 
             <div>
                 <b>Reloj Despertador</b>
@@ -62,7 +62,7 @@
         </div>
 
         <div>
-             <img src="rejojant.jpg" alt="Reloj Antiguo class=" class="imagenes">
+             <img src="rejojant.jpg" alt="Reloj Antiguo class=" class="imagenes" width="300" height="300">
              <div>
                  <b>Reloj Antiguo</b><br>
                  <p>$100.000</p>
@@ -74,7 +74,7 @@
             </div>
         </div>
         <div> 
-            <img src="relojarena.jpg" alt="Reloj de Arena" class="imagenes">
+            <img src="relojarena.jpg" alt="Reloj de Arena" class="imagenes" width="300" height="300">
 
             <div>
                 <b>Reloj De Arena</b>
