actividad de cierre

--- a/formulario.html
+++ b/formulario.html
@@ -15,10 +15,10 @@
             </div>
             <ul class="menu">
                 <li>
-                    <a href="">products</a>
+                    <a href="index1.html">products</a>
                 </li>
                 <li>
-                    <a href="">car</a>
+                    <a href="car.html">car</a>
                 </li>
                 <li>
                     <a href="">login</a>
