--- a/index1.html
+++ b/index1.html
@@ -17,7 +17,7 @@
                     <a href="">products</a>
                 </li>
                 <li>
-                    <a href="">car</a>
+                    <a href="car.html">car</a>
                 </li>
                 <li>
                     <a href="">login</a>
@@ -62,7 +62,7 @@
         </div>
 
         <div>
-             <img src="rejojant.jpg" alt="Reloj Antiguo class=" class="imagenes">
+             <img src="relojant.jpg" alt="Reloj Antiguo class=" class="imagenes">
              <div>
                  <b>Reloj Antiguo</b><br>
                  <p>$100.000</p>
@@ -87,7 +87,6 @@
             </div>
     </div>
     </div>
-
-
+  
 </body>
 </html>
